app folder inside src folder

--- a/src/styles/app.styl
+++ b/src/styles/app.styl
@@ -25,4 +25,4 @@ body
 
 // -- Components Styles --------------------------------------------------------
 
-@import '../components/ComponentName/ComponentName.styl'
+@import '../app/shared/components/ComponentName'
