--- a/src/styles/app.styl
+++ b/src/styles/app.styl
@@ -8,21 +8,17 @@
 
 // -- Base and Reset styles ----------------------------------------------------
 
-@require 'base/normalize'
-@require 'base/reset'
+//@import './base/normalize.styl'
+//@import './base/reset.styl'
 
 // -- Theme Styles -------------------------------------------------------------
 
-@import url('http://fonts.googleapis.com/css?family=Lato:400,700');
-@import 'theme/variables'
+//@import url('http://fonts.googleapis.com/css?family=Lato:400,700');
+//@import './theme/variables'
 
 // -- Main styles --------------------------------------------------------------
 
-body
-  background-color $gray_light
-  font-family $font_family_base
-  font-size 16px
-
-// -- Components Styles --------------------------------------------------------
-
-@import '../app/shared/components/ComponentName'
+//body
+//  background-color $gray_light
+//  font-family $font_family_base
+//  font-size 16px
