--- a/src/styles/app.styl
+++ b/src/styles/app.styl
@@ -13,7 +13,7 @@
 
 // -- Theme Styles -------------------------------------------------------------
 
-@import url('http://fonts.googleapis.com/css?family=Lato:400,700');
+@import './theme/fonts'
 @import './theme/variables'
 
 // -- Main styles --------------------------------------------------------------
