Fix stylint warnings

--- a/src/styles/app.styl
+++ b/src/styles/app.styl
@@ -13,8 +13,8 @@
 
 // -- Theme Styles -------------------------------------------------------------
 
-@import './theme/fonts'
-@import './theme/variables'
+@import './theme/fonts.styl'
+@import './theme/variables.styl'
 
 // -- Main styles --------------------------------------------------------------
 
