Fix url string on font-face

--- a/src/styles/theme/fonts.styl
+++ b/src/styles/theme/fonts.styl
@@ -4,5 +4,5 @@
   font-weight 400
   src local('Lato Normal'),
       local('Lato-Normal'),
-      url(https://themes.googleusercontent.com/static/fonts/lato/v6/9k-RPmcnxYEPm8CNFsH2gg.woff)
+      url('https://themes.googleusercontent.com/static/fonts/lato/v6/9k-RPmcnxYEPm8CNFsH2gg.woff')
       format('woff')
